2024 경북 인프라/app/yaml/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wsi
  labels:
    aws-observability: enabled
