2024 경북 인프라/app/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: wsi
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: wsi
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: wsi
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
